k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helep-ingress
  namespace: helep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: helep.local
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helep-user-service
                port:
                  number: 8001
          - path: /sos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helep-sos-service
                port:
                  number: 8002
          - path: /dispatch(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helep-dispatch-service
                port:
                  number: 8003
          - path: /notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helep-notification-service
                port:
                  number: 8004
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helep-analytics-service
                port:
                  number: 8005
